# repo-recall

./: .agentic-os.toml  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .trufflehog-exclude  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.demo  Dockerfile.web  Makefile  README.md  SECURITY.md  build.rs  cert-and-localhost-mess.md  config.example.yaml  docker-compose.yml  release-please-config.json
.agents/skills/repo-recall/: SKILL.md
.agents/skills/repo-repo-recall/: SKILL.md
.agents/skills/tooling-autonomous-pickup/: SKILL.md  details.md
.claude/: launch.json  lockdown-deny.sh  settings.json
.claude/skills/kai-autonomous-engineering/: SKILL.md
.claude/skills/kai-autonomous-engineering/references/: handbook.md
.claude/skills/recall-dispatch/: SKILL.md
.claude/skills/recall-dispatch/references/: handbook.md
.claude/skills/tooling-autonomous-pickup/: SKILL.md  script.py
.coily/: coily.yaml
.forgejo/workflows/: build-publish-deploy.yml  mirror-to-github.yml  release.yml
.github/scripts/: signed-commit.py
.github/workflows/: ci.yml  demo-image.yml  docker.yml  release.yml
.ward/: ward.yaml
Formula/: repo-recall.rb
deploy/: Caddyfile  repo-recall.yml
docs/: FEATURES.md  cert-and-localhost-clients.md  cert-and-localhost-http.md  cert-and-localhost-overview.md  cert-and-localhost-troubleshooting.md  endpoints.md  env-vars.md  forgejo-dispatch.md  pmcp-course-pointers.md  push-notifications.md
fixtures/: README.md
fixtures/sessions/: flake-finder-replay.jsonl  flake-finder-timeout.jsonl  note-sync-sqlite-migration.jsonl  widgetstore-cart-fix.jsonl  widgetstore-tax-calc.jsonl
scripts/: brew-build.sh  build-fixture-repos.sh  demo-entrypoint.sh  docker-demo-smoke.sh  install-systemd-user.sh  mcp-smoke.py  render-session-fixtures.sh  repo-recall.service
src/: activity.rs  commits.rs  config.rs  db.rs  join.rs  lib.rs  main.rs  push.rs  refresh.rs  scanner.rs  search.rs  sessions.rs  signals.rs  spans.rs  state.rs
src/display/: dispatch_artifacts.rs  mod.rs
src/display/mcp/: dispatch.rs  mod.rs  tools.rs
src/display/routes/: actions.rs  api.rs  dashboard.rs  fallback.rs  mod.rs  negotiate.rs  openapi.rs  refresh.rs  repos.rs  search.rs  sessions.rs  templates.rs
src/ingest/: health.rs  mod.rs  remote_kind.rs
src/ingest/claude/: mod.rs  sessions_jsonl.rs
src/ingest/cli_guard/: audit_jsonl.rs  mod.rs
src/ingest/docs/: agents_md.rs  autonomy_md.rs  features_md.rs  file_health.rs  mod.rs  readme.rs  repo_dispatch.rs
src/ingest/forgejo/: client.rs  mod.rs
src/ingest/git/: discovery.rs  log.rs  mod.rs
src/ingest/github/: ci_runs.rs  client.rs  commits.rs  fetch_state.rs  issues.rs  labeled.rs  milestones.rs  mod.rs  pulls.rs
src/mcp/: mod.rs  tools.rs
src/process/: activity.rs  agents_drift.rs  join.rs  mod.rs  sanitize.rs  structural_asks.rs
src/routes/: actions.rs  api.rs  dashboard.rs  mod.rs  negotiate.rs  openapi.rs  push.rs  refresh.rs  repos.rs  search.rs  sessions.rs  templates.rs  ws.rs
src/widgets/: dashboard.html
static/: action-required.js  dashboard-reload.js  manifest.webmanifest  push-subscribe.js  sw.js  tailwind.css  tailwind.input.css
tests/: demo.rs  mcp_smoke.rs  smoke.rs
tests/fixtures/: README.md  README.txt
tests/fixtures/github/: capture.sh  sanitize.py
tests/fixtures/github/errors/: README.md  issues_empty.http  malformed_body.http  rate_limited_primary.http  rate_limited_secondary.http  server_error.http  unauthorized.http
tests/fixtures/github/graphql/: labeled_graphql_error.http  labeled_happy.http  labeled_query.graphql  labeled_rate_limited.http
tests/fixtures/github/rest/: actions_runs.http  (+8 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  RepoCard.tsx  api.ts  main.tsx  types.ts
