[package]
name = "repo-recall"
# Pinned. Real version comes from build.rs (env var > git describe).
version = "0.0.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
pmcp = { version = "2.6", features = ["mcp-apps", "schema-generation"] }
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dunce = "1"
dotenvy = "0.15"
git-url-parse = "0.4"
aho-corasick = "1"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
serde_json = "1"
