[package]
name = "repo-recall"
# Pinned. Real version comes from build.rs (env var > git describe).
version = "0.0.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
maud = "0.26"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dunce = "1"
dotenvy = "0.15"
git-url-parse = "0.4"
aho-corasick = "1"
web-push = "0.10"
base64 = "0.22"
dirs = "5"
redb = "4"

# MCP App server. Purely additive — `repo-recall mcp` runs a stdio MCP server
# alongside the axum dashboard's brew-installed binary. The default invocation
# (`repo-recall`) still boots the axum dashboard.
pmcp = { version = "2.6", features = ["mcp-apps", "schema-generation", "streamable-http"] }
schemars = "1.0"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
