[package]
name = "repo-recall"
# Pinned. Real version comes from build.rs (env var > git describe).
version = "0.0.0-dev"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
maud = "0.26"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
# Used by `main` to render startup-path errors with rustc-style diagnostics.
# Route handlers, refresh, scanner, and DB modules stay on `anyhow::Result` —
# those errors flow into `tracing` and HTTP/MCP responses, not into a
# human-rendered diagnostic.
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
dunce = "1"
dotenvy = "0.15"
git-url-parse = "0.4"
aho-corasick = "1"
redb = "4"
tantivy = "0.26"

# MCP server. Purely additive — runs a stdio MCP server alongside the axum
# dashboard. The default invocation (`repo-recall`) boots both.
pmcp = { version = "2.6", features = ["schema-generation", "streamable-http"] }
schemars = "1.0"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
